# vc_insight_engine

./: .env.example  .gitignore  CLAUDE.md  PROJECT_STATUS.md
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_agentic_upgrade.py  003_add_dataset_registry.py  004_add_code_proposal_context.py  005_add_proposals_and_feedback.py  006_add_code_proposal_versioning.py
apps/api/src/app/: config.py  database.py  dependencies.py  main.py
apps/api/src/app/agent/: graph.py  llm.py  prompts.py  state.py
apps/api/src/app/middleware/: rate_limit.py
apps/api/tests/: conftest.py  test_agent_persistence.py  test_agent_proposals.py  test_artifacts.py  test_code.py  test_code_provenance.py  test_cot_sc_hardened.py  test_custom_endpoints.py  test_custom_through_agent.py  test_data_ingest_sheets.py  test_dtype_handling.py  test_events.py  test_execution_policy.py  test_experiment_tracker.py  test_feature_enforcement.py  test_feature_engineering.py  test_feature_selection.py  test_feedback.py  test_health.py  test_llm_json.py  test_merge_explosion.py  test_model_registry.py  test_modeling_explain.py  test_node_helpers.py  test_orchestrator.py  test_pipeline.py  test_profiling.py  test_proposal_revision_loop.py  test_proposals.py  test_react_loop.py  test_sandbox_network.py  test_self_heal.py  test_session_memory.py  test_session_service.py  test_session_storage.py  test_sessions.py  test_stale_propagation.py  test_start_analysis.py  test_step_completion_evidence.py  test_step_states.py  (+3 more)
(+163 files in other folders)
